<resources>
    <string name="app_name">EscoltApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="insert_phone_number">Insira seu nº de celular</string>
    <string name="phone_number_hint">987654321</string>
    <string name="phone_state_hint">84</string>
    <string name="emptyFildsMessage">Preencha todos os campos</string>
    <string name="unknow_auth_failure">Ocorreu um erro desconhecido na autenticação</string>
    <string name="invalid_phone_number">Número de telefone inválido</string>
    <string name="too_many_sms_requests">Você realizou muitas requisições de login. Aguarde alguns minutos.</string>
    <string name="network_error_message">Ocorreu um erro ao se comunicar com o servidor. Verifique sua conexão.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="ok">OK</string>
    <string name="auth_failure">Falha na autenticação</string>
    <string name="code_requested">Em instantes você receberá um SMS com o código de verificação.</string>
    <string name="invalid_typed_code">O código informado é inválido</string>
    <string name="error_getting_image">Um erro ocorreu ao selecionar a imagem.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="send_auth_code_again">Reenviar código de verificação</string>
    <string name="insert_code_sent">Insira o código enviado por SMS</string>
    <string name="back_to_previous_screen">Voltar para a tela anterior</string>
    <string name="insert_auth_code">Insira os seis dígitos do código verificador</string>
    <string name="change_photo">Mudar foto</string>
    <string name="profile_img">Imagem de perfil</string>
    <string name="first_name">Nome</string>
    <string name="asterisk">*</string>
    <string name="last_name">Sobrenome</string>
    <string name="profile_created">Perfil criado</string>
    <string name="profile_created_successfully">Seu perfil foi criado com sucesso</string>
    <string name="error_saving_profile_title">Erro ao salvar perfil</string>
    <string name="error_saving_profile_msg">Ocorreu um erro ao enviar os dados do perfil para o servidor. Por favor, verifique sua conexão e tente novamente.</string>
    <string name="choose_location">Escolher local</string>
    <string name="my_home">Minha residência</string>
    <string name="chooseHomeLocation">Escolha um local no mapa</string>
    <string name="sms_code_hint">123456</string>
    <string name="time_to_get_out_home">Tempo para sair de casa: %02d:%02d</string>
    <string name="count_down_started">Contagem regressiva iniciada</string>
    <string name="home">Início</string>
    <string name="places">Seguidores</string>
    <string name="following">Seguindo</string>
    <string name="photo">Foto</string>
    <string name="unfollow">Deixar de seguir</string>
    <string name="add">Adicionar</string>
    <string name="cancel">Cancelar</string>
    <string name="phone_number">Número de telefone</string>
    <string name="following_user">Agora você está seguindo %s.</string>
    <string name="error_following_user">Não foi possível seguir %s.</string>
    <string name="warning_message_content">%s pode estar em perigo. Entre em contato ou acione a polícia.</string>
    <string name="call_user">Ligar para %s</string>
    <string name="call_police">Ligar para polícia</string>
    <string name="police">Polícia</string>
    <string name="dismiss">Cancelar</string>
    <string name="i_am_fine">Estou bem</string>
    <string name="time_to_get_in_home">Tempo para entrar em casa: %02d:%02d</string>
    <string name="danger_message_sent">Mensagem de perigo enviada</string>
    <string name="could_not_send_danger_message">Não foi possível enviar mensagem de perigo</string>
    <string name="escolt_required">Escolta chamada</string>
    <string name="no_network_message">Não foi possível se conectar ao servidor. Verifique sua conexão com a internet.</string>
    <string name="error">Erro</string>
    <string name="my_places">Meus locais</string>
    <string name="removePlace">Remover local</string>
    <string name="label">Rótulo</string>
</resources>
